gsKit ChangeLog:

-> 06/15/04 - Chris Gilbert (Neovanglist) 
   * Project framework and build system completed.
   * Created CVS module and commited to PS2Dev CVS.
   * README, STATUS, AUTHORS, ID, and LICENSE files added.
